# polyai

./: PKGBUILD  README.md  polyai.py  pyproject.toml  setup.py
polyai/: __init__.py  monkey.py  polyai.py
